# media-session

./: .gitlab-ci.yml  INSTALL.md  LICENSE  NEWS  README.md  autogen.sh  media-session-uninstalled.sh  meson.build  meson_options.txt
doc/: Doxyfile.in  index.dox  meson.build
media-session.d/: alsa-monitor.conf  bluez-monitor.conf  media-session.conf  meson.build  v4l2-monitor.conf  with-module-set.in
po/: POTFILES.in  POTFILES.skip  af.po  as.po  be.po  bg.po  bn_IN.po  ca.po  cs.po  da.po  de.po  de_CH.po  el.po  eo.po  es.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  kn.po  ko.po  lt.po  media-session.pot  meson.build  ml.po  mr.po  my.po  nl.po  nn.po  oc.po  or.po  pa.po  (+15 more)
src/: alsa-midi.c  alsa-monitor.c  bluez-endpoint.c  media-session.c  meson.build  policy-node.c  stream-endpoint.c
src/media-session/: meson.build
src/media-session.d/: media-session.conf
systemd/system/: meson.build
systemd/user/: meson.build
tools/: meson.build  pw-reserve.c
